# carball-lite

./: pyproject.toml
carball_lite/: game.py  player.py
carball_lite/actor/: ball.py  car.py  dropshot.py
carball_lite/sanity_check/: sanity_check.py
carball_lite/sanity_check/base_checks/: game_check.py  player_check.py
